--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,17 @@
 :root {
     --light: #fff;
     --blue: #2b70b0;
+    --headfont: 30px;
+    --navfont: 18px;
+    --fontfamily: 'Open Sans'
+}
+*{
+  font-family: var(--fontfamily);
+}
+#work {
+  font-size: 40px;
+  font-weight: bold;
+  text-align: center;
 }
 
 header {
@@ -10,8 +21,12 @@ header {
     padding: 1%;
     background-color: var(--blue);
     color: var(--light);
+    font-size: var(--headfont);
 }
 
+header p {
+  font-size: 50px;
+}
 footer {
     display: flex;
     justify-content: space-between;
@@ -19,6 +34,7 @@ footer {
     padding: 1%;
     background-color: var(--blue);
     color: var(--light);
+    font-size: 30px;
 }
 .headshot {
     padding: 10px;
@@ -30,25 +46,31 @@ footer {
     flex-direction: column;
     text-align: left;
 }
-.headshot > header {
+.headshot header {
     padding: 20px;
     width: 300px;
     text-align: center;
+    display: block;
 }
-.headshot > p > img {
+.headshot p img {
     width: 300px;
     height: auto;
     float: left;
     margin: 0 15px 15px 0;
 }
 
-h2 {
-    text-align: center;
+.headshot p {
+  line-height: 1.8;
 }
+h1 {
+  font-size: 25px;
+}
+
 nav ul {
     display: flex;
     justify-content: space-between;
     min-width: 300px;
+    font-size: 15px;
   }
   
 nav a {
@@ -56,7 +78,15 @@ nav a {
     color: var(--light);
     font-weight: bold;
     text-decoration: none;
+    font-size: var(--navfont);
   }
+hr {
+  width: 70% ;
+  margin-right: auto;
+  margin-left: auto;
+  height: 2px;
+  background-color: black;
+}
 
 .projects {
     flex: 1;
@@ -66,23 +96,34 @@ nav a {
     flex-wrap: wrap;
     justify-content: space-evenly;
   }
-  
+  .card1 img {
+    width: 2200px;
+  }
+  .card1 p {
+    background-color: var(--blue);
+    color: var(--light);
+    text-indent: 150px;
+    font-size: 20px;
+  }
   .card {
-    padding: 10px;
     flex: 0 0 300px;
     margin: 20px;
   }
   
-  .card > header {
+  .card header {
     padding: 20px;
   }
   
-  .card > p {
-    text-align: center;
+  .card p {
+      padding: 1%;
+      background-color: var(--blue);
+      color: var(--light);
+      text-align: center;
+      font-size: 20px;
   }
+  
   
   .card > img {
     width: 100%;
   }
-
 
